--- a/Customer App/ClassListPage.xaml
+++ b/Customer App/ClassListPage.xaml
@@ -3,15 +3,45 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Customer_App.ClassListPage">
 
-    <ScrollView>
+    <Grid Padding="5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-        <VerticalStackLayout>
+        <!-- Search Area -->
+        <HorizontalStackLayout Grid.Row="0" Padding="10">
+            <!-- Search Switch -->
+            <VerticalStackLayout Padding="10">
+                <Label x:Name="SearchLabel" Text="Search by Time" HorizontalOptions="Start"/>
+                <Switch x:Name="SearchSwitch" Toggled="OnSearchSwitchToggled" HorizontalOptions="Start"/>
+            </VerticalStackLayout>
 
-            <ListView x:Name="classList"
-                      BackgroundColor="Transparent"
-                      SeparatorColor="Gray"/>
+            <!-- Search Bar -->
+            <SearchBar x:Name="ClassSearchBar" Placeholder="Search items..." TextChanged="OnTextChanged" HorizontalOptions="FillAndExpand" MaximumWidthRequest="200"/>
+        </HorizontalStackLayout>
 
-        </VerticalStackLayout>
+        <!-- Class Instances List -->
+        <ListView Grid.Row="1" x:Name="ClassInstancesListView" HasUnevenRows="True" SelectionMode="None" VerticalOptions="FillAndExpand">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <HorizontalStackLayout Padding="10" Spacing="75">
+                            <!-- ClassInstance Details -->
+                            <VerticalStackLayout HorizontalOptions="StartAndExpand">
+                                <Label Text="{Binding ClassDate}" VerticalOptions="Center" />
+                                <Label Text="{Binding ClassTime}" VerticalOptions="Center" />
+                                <Label Text="{Binding DayOfTheWeek}" VerticalOptions="Center" />
+                                <Label Text="{Binding TeacherName}" VerticalOptions="Center" />
+                            </VerticalStackLayout>
 
-    </ScrollView>
+                            <!-- Add to Cart Button -->
+                            <Button Text="Add to Cart" FontAttributes="Bold" VerticalOptions="Center" Clicked="AddToCart_Clicked" BackgroundColor="DarkGoldenrod"/>
+                        </HorizontalStackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+    </Grid>
 </ContentPage>
