Added web server connection (final version)

--- a/Customer App/AppShell.xaml
+++ b/Customer App/AppShell.xaml
@@ -7,15 +7,15 @@
     Shell.FlyoutBehavior="Disabled">
 
 
-    <!--<ShellContent
-        Title="Login"
-        ContentTemplate="{DataTemplate local:LoginPage}"
-        Route="LoginPage" />-->
-
     <ShellContent
         Title="Login"
+        ContentTemplate="{DataTemplate local:LoginPage}"
+        Route="LoginPage" />
+
+    <!--ShellContent
+        Title="Login"
         ContentTemplate="{DataTemplate local:NewPage2}"
-        Route="NewPage2" />
+        Route="NewPage2" />-->
 
     <TabBar x:Name="CustomerTabBar">
         <Tab Title="Class List" Icon="list_icon.svg">
